# remix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/bc/: bridge_diffusion.py  oxe_diffusion.py  robomimic_square_unet.py
configs/cotrain/: bridge_diffusion.py  oxe_diffusion.py
configs/doremi/: bridge_rn.py  oxe_rn.py  robomimic_square.py
openx/data/: core.py  dataloader.py  filters.py  mixes.py  transforms.py  utils.py
openx/data/datasets/: bridge.py  franka.py  oxe.py  robomimic.py
openx/envs/: franka.py  robomimic.py  widowx.py  wrappers.py
openx/networks/: action_heads.py  core.py  mlp.py  resnet.py  unet.py  vit.py
openx/utils/: evaluate.py  logger.py  schedules.py  spec.py
rlds/bridge/: CITATIONS.bib  README.md  bridge_dataset_builder.py
rlds/robomimic/: CITATIONS.bib  README.md  robomimic_dataset_builder.py
scripts/: test.py  train_bc.py  train_remix.py
scripts/data/: check_dataset.py  get_train_dataset_sizes.py  kmeans.py  plot_actions.py  refresh_dataset_statistics.py  subset_bridge_by_doremi.py  subset_bridge_by_kmeans.py
scripts/robot/: eval_franka.py  eval_widowx.py
